--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         
         <!-- script -->
         <!-- Link my script.js file -->
-        <script type=module src="script2.js"></script>
+        <script type=module src="script.js"></script>
 
     </body>
 </html>
